# python-project-lvl2

./: .coverage  Makefile  README.md  pyproject.toml
.github/workflows/: linter_check.yml
gendiff/: for_test.py  gendiff.py  parsing.py  stylish.py
gendiff/formatters/: format_diff.py  plain.py  stylish.py
gendiff/tests/: test_simple.py
gendiff/tests/fixtures/: 1.txt  file_11.json  file_22.json  step6_base1.json  test_file1.yaml
hexlet_code/: gendiff.py
tests/: test_simple.py
